bai tap ve nha day 21

--- a/btvn-day21/index.html
+++ b/btvn-day21/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Danh sách nhân viên</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,6 +19,7 @@
         <tbody></tbody>
     </table>
 </div>
+
 
 <div class="dialog-container" id="dialogContainer">
     <div class="overlay">
@@ -154,7 +155,7 @@
 
         editDialogContainer.style.display = 'block';
     }
-     // click vao cancel de dong dialog
+    // click vao cancel de dong dialog
     const onCloseEditDialog = () => {
         editDialogContainer.style.display = 'none';
     }
