bai tap ve nha day 21

--- a/btvn-day21/index.html
+++ b/btvn-day21/index.html
@@ -29,6 +29,20 @@
                 <input type="text" placeholder='name' name="name"/>
                 <input type="text" placeholder='address' name="address"/>
                 <input type="number" placeholder='age' name="age"/>
+                <select name="city">
+                    <option value=""> Chọn thành phố</option>
+                    <option value="Hà Nội">Hà Nội</option>
+                    <option value="Hồ Chí Minh">Hồ Chí Minh</option>
+                    <option value="Đà Nẵng">Đà Nẵng</option>
+                    <option value="Đà Nẵng">Thanh Hóa</option>
+                    <option value="Đà Nẵng">Nghệ An</option>
+                    <option value="Đà Nẵng">Nam Định</option>
+                    <option value="Đà Nẵng">Vĩnh Phúc</option>
+                    <option value="Đà Nẵng">Bắc Giang </option>
+                    <option value="Đà Nẵng">Hà Nam</option>
+                    <option value="Đà Nẵng">Ninh Bình</option>
+                </select>
+
             </div>
             <div class="dialog-button">
                 <button class="cancel-btn" onclick="onCloseDialog()">Cancel</button>
@@ -46,6 +60,19 @@
                 <input type="text" placeholder='name' name="name"/>
                 <input type="text" placeholder='address' name="address"/>
                 <input type="number" placeholder='age' name="age"/>
+                <select name="city">
+                    <option value=""> Chọn thành phố</option>
+                    <option value="Hà Nội">Hà Nội</option>
+                    <option value="Hồ Chí Minh">Hồ Chí Minh</option>
+                    <option value="Đà Nẵng">Đà Nẵng</option>
+                    <option value="Đà Nẵng">Thanh Hóa</option>
+                    <option value="Đà Nẵng">Nghệ An</option>
+                    <option value="Đà Nẵng">Nam Định</option>
+                    <option value="Đà Nẵng">Vĩnh Phúc</option>
+                    <option value="Đà Nẵng">Bắc Giang </option>
+                    <option value="Đà Nẵng">Hà Nam</option>
+                    <option value="Đà Nẵng">Ninh Bình</option>
+                </select>
             </div>
             <div class="dialog-button">
                 <button class="cancel-btn" onclick="onCloseEditDialog()">Cancel</button>
@@ -73,14 +100,16 @@
         { name: 'id', text: 'ID', align: 'center' },
         { name: 'name', text: 'Tên' },
         { name: 'address', text: 'Địa chỉ' },
+        { name: 'city', text: 'Thành phố',align: 'center' },
         { name: 'age', text: 'Tuổi', align: 'right' },
         { name: 'action', text: 'Thao tác', align: 'center' },
+
     ];
 
     let employees = [
-        { id: 1, name: 'Trần Phạm Tín', address: 'Hoài Đức - Hà Nội', age: 27 },
-        { id: 2, name: 'Phạm Nguyễn Bắc', address: 'Cổ Nhuế - Hà Nội', age: 27 },
-        { id: 3, name: 'Nguyễn Nam Tào', address: 'Sóc Sơn - Hà Nội', age: 27 },
+        { id: 1, name: 'Trần Phạm Tín', address: 'Hoài Đức - Hà Nội', age: 27,city: 'Hà Nội' },
+        { id: 2, name: 'Phạm Nguyễn Bắc', address: 'Cổ Nhuế - Hà Nội', age: 27,city: 'Hà Nội' },
+        { id: 3, name: 'Nguyễn Nam Tào', address: 'Sóc Sơn - Hà Nội', age: 27,city: 'Hà Nội' },
     ];
 
     const dialogContainer = document.getElementById('dialogContainer');
@@ -96,12 +125,18 @@
     });
 
     // Hàm render danh sách nhân viên
-    function renderEmployees(keyword = '') {
+    const renderEmployees= (keyword = '') => {
         const lowerKeyword = keyword.toLowerCase();
         tableBody.innerHTML = '';
 
+        // Tạo searchStr cho mỗi employee
+        employees.forEach(emp => {
+            emp.searchStr = `${emp.name}|${emp.address}|${emp.city}|${emp.age}`.toLowerCase();
+        });
+
+        // Lọc theo searchStr
         const filtered = employees.filter(emp =>
-            `${emp.name} ${emp.address} ${emp.age}`.toLowerCase().includes(lowerKeyword)
+            emp.searchStr.includes(lowerKeyword)
         );
 
         filtered.forEach((employee, index) => {
@@ -138,6 +173,7 @@
         });
     }
 
+
     // click vao add new de them moi
     const onOpenDialog = () => {
         dialogContainer.style.display = 'block';
@@ -152,6 +188,8 @@
         document.querySelector('#editDialogContainer input[name="name"]').value = employee.name;
         document.querySelector('#editDialogContainer input[name="address"]').value = employee.address;
         document.querySelector('#editDialogContainer input[name="age"]').value = employee.age;
+        document.querySelector('#editDialogContainer select[name="city"]').value = employee.city;
+
 
         editDialogContainer.style.display = 'block';
     }
@@ -171,6 +209,16 @@
 
     // luu nhan vien moi
     const onSaveDialog = () => {
+        const name = document.querySelector('#dialogContainer input[name="name"]').value.trim();
+        const address = document.querySelector('#dialogContainer input[name="address"]').value.trim();
+        const age = document.querySelector('#dialogContainer input[name="age"]').value.trim();
+        const city = document.querySelector('#dialogContainer select[name="city"]').value.trim();
+
+        // Kiểm tra nếu thiếu thông tin thì không thêm
+        if (!name || !address || !age || !city) {
+            alert("Vui lòng điền thông tin.");
+            return;
+        }
         // tao id moi
         const newId = employees.length ? employees[employees.length - 1].id + 1 : 1;
 
@@ -179,6 +227,7 @@
             name: document.querySelector('#dialogContainer input[name="name"]').value,
             address: document.querySelector('#dialogContainer input[name="address"]').value,
             age: document.querySelector('#dialogContainer input[name="age"]').value,
+            city: document.querySelector('#dialogContainer select[name="city"]').value,
         };
         // them nhan vien moi vao danh sach
         employees.push(employee);
@@ -191,6 +240,15 @@
         const name = document.querySelector('#editDialogContainer input[name="name"]').value;
         const address = document.querySelector('#editDialogContainer input[name="address"]').value;
         const age = document.querySelector('#editDialogContainer input[name="age"]').value;
+        const city = document.querySelector('#editDialogContainer select[name="city"]').value;
+
+        // Kiểm tra nếu thiếu thông tin thì không thêm
+        if (!name || !address || !age || !city) {
+            alert("Vui lòng điền đầy đủ thông tin.");
+            return;
+        }
+
+        const newId = employees.length ? employees[employees.length - 1].id + 1 : 1;
 
         const index = employees.findIndex(emp => emp.id === id);
 
@@ -199,7 +257,8 @@
                 id: id,
                 name: name,
                 address: address,
-                age: age
+                age: age,
+                city: city,
             };
 
             onCloseEditDialog();
